[xxxx] fix: fixed text on mobile devices, changed hash route to browser

--- a/src/components/common/PopUpTiTleWithSlowUnderline/PopUpTitleWithSlowUnderline.module.css
+++ b/src/components/common/PopUpTiTleWithSlowUnderline/PopUpTitleWithSlowUnderline.module.css
@@ -21,7 +21,7 @@
 .text {
     font-family: Apexnewweb, sans-serif;
     font-size: 18px;
-    line-height: 10px;
+    line-height: 18px;
     font-weight: 300;
     letter-spacing: 4px;
     text-transform: uppercase;
